# spaceship_titanic_mlops_23_24

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  infer.py  pyproject.toml  train.py
.dvc/: config
configs/: config.yaml
data/: test.csv.dvc  train.csv.dvc
models/: model.safetensor.dvc  preprocessing_pipeline.skops.dvc
spaceship/: config.py  dataset.py  infer.py  model.py  train.py
