[tool.poetry]
name = "spaceship"
version = "0.1.0"
description = "Prediction which passengers are transported to an alternate dimension"
authors = ["Alina Kostromina <amkostromina@edu.hse.ru>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.3"
matplotlib = "^3.8.2"
torch = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
